WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299885
[CSS Zoom] Take 2: Apply zoom factor to border-spacing and border width (after revert)
https://bugs.webkit.org/show_bug.cgi?id=299885
Summary
[CSS Zoom] Take 2: Apply zoom factor to border-spacing and border width (afte...
Taher
Reported
2025-09-30 11:28:03 PDT
After
300756@main
reverted. We need to re-land this by addressing unresolved feedback.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-30 11:28:10 PDT
<
rdar://problem/161669263
>
Taher
Comment 2
2025-09-30 12:26:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51583
EWS
Comment 3
2025-10-14 23:59:23 PDT
Committed
301536@main
(c38095edbbdb): <
https://commits.webkit.org/301536@main
> Reviewed commits have been landed. Closing PR #51583 and removing active labels.
Diego Pino
Comment 4
2025-10-16 00:25:33 PDT
This changeset broke the WPE build for ARM 32-bit:
https://build.webkit.org/#/builders/860/builds/24486
The build error is: /home/buildbot/worker/WPE-Linux-ARM32-bit-Release-Debian-Stable-Build/build/Source/WebCore/rendering/style/StyleRareInheritedData.cpp:74:15: error: static assertion failed due to requirement 'sizeof(WebCore::StyleRareInheritedData) <= sizeof(WebCore::GreaterThanOrSameSizeAsStyleRareInheritedData)': StyleRareInheritedData should bit pack 74 | static_assert(sizeof(StyleRareInheritedData) <= sizeof(GreaterThanOrSameSizeAsStyleRareInheritedData), "StyleRareInheritedData should bit pack"); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/buildbot/worker/WPE-Linux-ARM32-bit-Release-Debian-Stable-Build/build/Source/WebCore/rendering/style/StyleRareInheritedData.cpp:74:46: note: expression evaluates to '416 <= 408' 74 | static_assert(sizeof(StyleRareInheritedData) <= sizeof(GreaterThanOrSameSizeAsStyleRareInheritedData), "StyleRareInheritedData should bit pack"); The issue is that the patch added a new field, deviceScaleFactor, to class StyleRareInheritedData without adding a field of the same size to class GreaterThanOrSameSizeAsStyleRareInheritedData. I don't understand why the build error was caught only by the 32-bit build and not the 64-bit though.
Diego Pino
Comment 5
2025-10-16 00:25:43 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/52453
EWS
Comment 6
2025-10-16 20:41:53 PDT
Committed
301686@main
(6da2789184a8): <
https://commits.webkit.org/301686@main
> Reviewed commits have been landed. Closing PR #52453 and removing active labels.
Sammy Gill
Comment 7
2025-10-28 11:37:34 PDT
WPT export:
https://github.com/web-platform-tests/wpt/pull/55727
Tim Nguyen (:ntim)
Comment 8
2025-10-30 08:03:18 PDT
rdar://161008191
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug