[WPE] Fix build for ARM 32-bit after 301536@main https://bugs.webkit.org/show_bug.cgi?id=299885

Reviewed by Sam Weinig.

Fix build error in 'StyleRareInheritedData.cpp:74':

error: static assertion failed due to requirement
   74 | static_assert(sizeof(StyleRareInheritedData) <= sizeof(GreaterThanOrSameSizeAsStyleRareInheritedData), "StyleRareInheritedData should bit pack");

note: expression evaluates to '416 <= 408'
   74 | static_assert(sizeof(StyleRareInheritedData) <= sizeof(GreaterThanOrSameSizeAsStyleRareInheritedData), "StyleRareInheritedData should bit pack");

The build error started happening after 301536@main.

This changeset adds a new data field, 'deviceScaleFactor',
to 'StyleRareInheritedData' without updating 'GreaterThanOrSameSizeAsStyleRareInheritedData'.

Still, adding this field alone doesn't fix the build error because
there was another data field, 'textStrokeWidth', pending to be added.

Also, change 'styleImage' data type to 'Style::ImageOrNone'.

* Source/WebCore/rendering/style/StyleRareInheritedData.cpp:

Canonical link: https://commits.webkit.org/301686@main